--- a/PAI2_ST10/pom.xml
+++ b/PAI2_ST10/pom.xml
@@ -14,6 +14,13 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.42.0.0</version>
         </dependency>
+
+        <!-- Dependencias para análisis de código -->
+        <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs</artifactId>
+            <version>4.7.3</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -24,7 +31,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>17</source>  <!-- Ajusta según la versión de Java -->
+                    <source>17</source>
                     <target>17</target>
                 </configuration>
             </plugin>
@@ -37,6 +44,34 @@
                 <configuration>
                     <mainClass>ServerSideSocket</mainClass>
                 </configuration>
+            </plugin>
+
+            <!-- Plugin SpotBugs -->
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.7.3.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Plugin Dependency-Check -->
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>8.4.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
