--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -47,4 +47,4 @@ jobs:
         run: sudo apt-get install -y maven
 
       - name: Ejecutar análisis con SpotBugs
-        run: mvn spotbugs:check
+        run: cd .\PAI2_ST10\  && mvn spotbugs:check
