--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -61,6 +61,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Instalar Maven
+        run: sudo apt-get install -y maven
+        
       - name: Instalar dependencias
         run: |
           # Instalar dependencias
