arreglar wf dast

--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -63,11 +63,11 @@ jobs:
 
       - name: Instalar Maven
         run: sudo apt-get install -y maven
-        
+
       - name: Instalar dependencias
         run: |
           # Instalar dependencias
-          mvn install -DskipTests
+          cd PAI2_ST10 && mvn install -DskipTests
 
       - name: Ejecutar el servidor SSL en segundo plano
         run: |
