--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -83,4 +83,6 @@ jobs:
       - name: Ejecutar OWASP ZAP DAST
         run: |
           # Ejecutar las pruebas DAST con ZAP sobre HTTPS (con SSL)
-          docker run --rm -t ictu/zap2docker zap-full-scan.py -t https://localhost:3343
+           docker run --rm -u root -v $(pwd):/zap/wrk -t zaproxy/zap-stable zap-full-scan.py \
+          -t https://host.docker.internal:3343 \
+          -r zap-report.html
