--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -10,6 +10,20 @@ on:
   workflow_dispatch:
 
 jobs:
+  iac:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clonar repositorio
+        uses: actions/checkout@v3
+
+      - name: Instalar Trivy
+        run: |
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
+
+      - name: Ejecutar Trivy para IaC
+        run: |
+          trivy config . --exit-code 0 --severity LOW,MEDIUM,HIGH,CRITICAL
+          
   sca:
     runs-on: ubuntu-latest
     steps:
@@ -122,3 +136,4 @@ jobs:
         
                 # Ejecutar Semgrep IAST sobre la aplicación corriendo
                 semgrep --config=auto --exclude target --exclude .git .
+        
